force-app/main/core/objects/Opportunity/fields/ExpectedTurnoverMonth__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTurnoverMonth__c</fullName>
    <label>Expected Turnover ($ Month)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>