force-app/main/core/objects/Opportunity/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>