force-app/main/core/objects/Opportunity/fields/GeneralTurnoverPlan__c.field-meta.xml
<CustomField>
    <fullName>GeneralTurnoverPlan__c</fullName>
    <label>General Turnover (Plan)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>