force-app/main/core/objects/Opportunity/fields/NodaTurnoverPlan__c.field-meta.xml
<CustomField>
    <fullName>NodaTurnoverPlan__c</fullName>
    <label>Noda Turnover (Plan)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>