force-app/main/core/objects/Opportunity/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noda Go</fullName>
            </value>
            <value>
                <fullName>Noda Buffet</fullName>
            </value>
            <value>
                <fullName>Pay In</fullName>
            </value>
            <value>
                <fullName>Pay Out</fullName>
            </value>
            <value>
                <fullName>Payment links</fullName>
            </value>
            <value>
                <fullName>Trusted Payments</fullName>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>KYW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>