force-app/main/core/objects/Opportunity/fields/SpecifyLossReason__c.field-meta.xml
<CustomField>
    <fullName>SpecifyLossReason__c</fullName>
    <description>Free text field to specify license/traffic/other reason when loose opportunity</description>
    <label>Specify Loss Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>