force-app/main/core/objects/Opportunity/fields/SubStage__c.field-meta.xml
<CustomField>
    <fullName>SubStage__c</fullName>
    <label>Sub Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Participants</fullName>
            </value>
            <value>
                <fullName>Meeting Results</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Docs Uploaded</fullName>
            </value>
            <value>
                <fullName>Docs Review</fullName>
            </value>
            <value>
                <fullName>Wait Additional Docs</fullName>
            </value>
            <value>
                <fullName>Wait For Integration</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>