force-app/main/core/objects/Opportunity/recordTypes/ResellerWL.recordType-meta.xml
<RecordType>
    <fullName>ResellerWL</fullName>
    <active>true</active>
    <businessProcess>ResellerWL</businessProcess>
    <label>Reseller/WL</label>
</RecordType>