force-app/main/core/objects/Opportunity/recordTypes/Upsale.recordType-meta.xml
<RecordType>
    <fullName>Upsale</fullName>
    <active>true</active>
    <businessProcess>Upsale</businessProcess>
    <label>Upsale</label>
</RecordType>