force-app/main/core/objects/Opportunity/validationRules/ClosedWithoutLostReason.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedWithoutLostReason</fullName>
    <active>true</active>
    <description>Cannot close oppty w/o Loss Reason</description>
    <errorConditionFormula>ISPICKVAL(StageName, &apos;Closed Lost&apos;)
&amp;&amp;
ISPICKVAL(Loss_Reason__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>Provide Loss Reason to Close Opportunity as Lost</errorMessage>
</ValidationRule>