force-app/main/core/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>SubStage__c</columns>
    <columns>DirectPrice__c</columns>
    <columns>ResellerPrice__c</columns>
    <columns>Reseller__c</columns>
    <columns>Agreement__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
</ListView>